# valid-demo

./: .gitignore  README.md
bbs/: Cargo.toml  README.md  valid.toml
bbs/docs/: demo_walkthrough.md  valid_guide.md  valid_registry_workflow.md
bbs/docs/rdd/: 02_post_list.md  04_post_detail.md  05_post_edit_and_delete.md  07_valid_models.md  08_bbs_acceptance_requirements.md  README.md
bbs/scripts/: verify_valid_registry.sh
bbs/src/: main.rs
bbs/valid/: contract-lock.json
bbs/valid/board_rdd_registry/: api_contract.rs  board_flow.rs  comment.rs  common_spec.rs  edit_delete.rs  edit_key_storage.rs  list_rendering.rs  message_contract.rs  post_create.rs  post_detail.rs  post_list.rs  presentation_contract.rs  retry_ux.rs  shared.rs  submission_discipline.rs
bss/: Cargo.toml  README.md  valid.lock.json
bss/docs/: valid_registry_workflow.md
bss/docs/rdd/: 00_assumptions_and_scope.md  00_前提とスコープ.md  01_common_specification.md  01_共通仕様.md  02_投稿一覧機能.md  03_post_creation.md  03_投稿作成機能.md  04_投稿詳細機能.md  05_投稿編集・削除機能.md  06_comments.md  06_コメント機能.md  07_valid_models.md  08_BBS成立要件.md  README.md
bss/scripts/: verify_valid_registry.sh
bss/valid/: board_rdd_registry.rs
bss/valid/board_rdd_registry/: board_flow.rs  edit_delete.rs  edit_key_storage.rs  presentation_contract.rs  retry_ux.rs
